tests/src/Loader/classloader/generics/Instantiation/Negative/T_Types.ilproj
<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
  <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.props))\dir.props" />
  <PropertyGroup>
    <AssemblyName>T_Types</AssemblyName>
    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
    <OutputType>Library</OutputType>
    <CLRTestKind>BuildOnly</CLRTestKind>
    <CLRTestPriority>0</CLRTestPriority>
  </PropertyGroup>
  <ItemGroup />
  <ItemGroup>
    <Compile Include="T_Types.il" />
  </ItemGroup>
  <ItemGroup />
  <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.targets))\dir.targets" />
</Project>